@@ -54,11 +54,16 @@
 
     <properties>
         <concurrent-tck-groups>platform</concurrent-tck-groups> <!-- Groups to include i.e. web/platform, given by the tck-->
-                                                
-        <!-- Library Dependencies -->
-        <jakarta.enterprise.concurrent-api>3.1.1</jakarta.enterprise.concurrent-api>
 
         <tck-suite.xml>src${file.separator}test${file.separator}resources${file.separator}tck-suite.xml</tck-suite.xml>
+
+        <!-- Override parent version. We require 2.3, which breaks many other TCKs -->
+        <jakarta.tck.sigtest-maven-plugin.version>2.3</jakarta.tck.sigtest-maven-plugin.version>
+
+
+        <jimage.dir>${project.build.outputDirectory}${file.separator}jimage</jimage.dir>
+        <!-- CLI override property workaround for Windows because of how the create-system-properties command parses ':' and '\' -->
+        <jimage.dir.escaped>${jimage.dir}</jimage.dir.escaped>
     </properties>
     
     <!-- The Arquillian test framework -->
@@ -71,6 +76,12 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>jakarta.tck</groupId>
+                <artifactId>sigtest-maven-plugin</artifactId>
+                <version>${jakarta.tck.sigtest-maven-plugin.version}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     
@@ -79,7 +90,7 @@
         <dependency>
             <groupId>jakarta.enterprise.concurrent</groupId>
             <artifactId>jakarta.enterprise.concurrent-tck</artifactId>
-            <version>${jakarta.enterprise.concurrent-api}</version>
+            <version>${jakarta.tck.concurrency.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- APIs -->
@@ -104,18 +115,10 @@
             <groupId>org.jboss.arquillian.junit5</groupId>
             <artifactId>arquillian-junit5-container</artifactId>
         </dependency>
-        <!-- Remote Payara server - can be removed, when the Jenkins job will run the test with -Ppayara-server-remote -->
-        <dependency>
-            <groupId>fish.payara.arquillian</groupId>
-            <artifactId>arquillian-payara-server-remote</artifactId>
-            <scope>test</scope>
-        </dependency>
         
         <dependency>
             <groupId>fish.payara.arquillian</groupId>
             <artifactId>payara-client-ee11</artifactId>
-            <!-- remove when version provided by payara-bom -->
-            <version>${payara.arquillian.version}</version>
             <scope>test</scope>
         </dependency>
         
@@ -138,14 +141,14 @@
                 <executions>
                     <execution>
                         <id>copy</id>
-                        <phase>package</phase>
+                        <phase>pre-integration-test</phase>
                         <goals>
                             <goal>copy</goal>
                         </goals>
                     </execution>
                     <execution>
                         <id>copy-dependency</id>
-                        <phase>package</phase>
+                        <phase>pre-integration-test</phase>
                         <goals>
                             <goal>copy-dependencies</goal>
                         </goals>
@@ -159,52 +162,136 @@
                         <artifactItem>
                             <groupId>org.apache.derby</groupId>
                             <artifactId>derby</artifactId>
-                            <version>10.15.2.0</version>
+                            <version>10.17.1.0</version>
                         </artifactItem>
                         <artifactItem>
                             <groupId>org.apache.derby</groupId>
                             <artifactId>derbytools</artifactId>
-                            <version>10.15.2.0</version>
+                            <version>10.17.1.0</version>
                         </artifactItem>
                         <artifactItem>
                             <groupId>org.apache.derby</groupId>
                             <artifactId>derbyshared</artifactId>
-                            <version>10.15.2.0</version>
+                            <version>10.17.1.0</version>
                         </artifactItem>
                     </artifactItems>
-                    <outputDirectory>${project.build.directory}/server-dependencies</outputDirectory>
+                    <outputDirectory>${payara.home}${file.separator}glassfish${file.separator}domains${file.separator}domain1${file.separator}lib</outputDirectory>
                 </configuration>
-            </plugin>  
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>start-payara-server-for-config</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipServerStartStop}</skip>
+                            <executable>${payara.asadmin}</executable>
+                            <arguments>
+                                <argument>start-domain</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-jvm-options</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipConfig}</skip>
+                            <executable>${payara.asadmin}</executable>
+                            <arguments>
+                                <argument>create-jvm-options</argument>
+                                <argument>--add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>set-jimage-dir-property</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipConfig}</skip>
+                            <executable>${payara.asadmin}</executable>
+                            <arguments>
+                                <argument>create-system-properties</argument>
+                                <argument>jimage.dir=${jimage.dir.escaped}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>create-javajoe-user</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipConfig}</skip>
+                            <executable>${payara.asadmin}</executable>
+                            <arguments>
+                                <argument>--passwordfile=${project.basedir}${file.separator}prepare-server-password</argument>
+                                <argument>create-file-user</argument>
+                                <argument>--groups=Manager</argument>
+                                <argument>--authrealmname=file</argument>
+                                <argument>javajoe</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>stop-payara-server-after-config</id>
+                        <phase>pre-integration-test</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <skip>${skipServerStartStop}</skip>
+                            <executable>${payara.asadmin}</executable>
+                            <arguments>
+                                <argument>stop-domain</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.0</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit-platform</artifactId>
-                        <version>3.5.0</version>
-                    </dependency>
-                </dependencies>
-                <configuration>
-                    <systemProperties>
-                        <property>
-                            <name>jimage.dir</name>
-                            <value>${project.build.outputDirectory}${file.separator}jimage</value>
-                        </property>
-                    </systemProperties>
-                    <systemPropertyVariables>
-                    </systemPropertyVariables>
-                    <groups>${concurrent-tck-groups}</groups>
-                    <!-- For debugging, include only subset of tests: -->
-<!--                     <includes>
-                        <include>ee.jakarta.tck.concurrent.spec.signature.*Tests</include>
-                    </includes> -->
-                    <testSourceDirectory>${project.basedir}${file.separarator}src${file.separarator}main${file.separarator}java${file.separarator}</testSourceDirectory>
-                    <dependenciesToScan>
-                        <dependency>jakarta.enterprise.concurrent:jakarta.enterprise.concurrent-tck</dependency>
-                    </dependenciesToScan>
-                </configuration>
+                <!-- FIXME PLEASE! Ugly workaround - failsafe seems to struggle to find the tests -->
+                <executions>
+                    <execution>
+                        <id>default-test</id>
+                        <phase>none</phase>
+                    </execution>
+                    <execution>
+                        <id>run-concurrency-tck</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <jimage.dir>${jimage.dir}</jimage.dir>
+                                <payara.home>${payara.home}</payara.home>
+                            </systemPropertyVariables>
+                            <groups>${concurrent-tck-groups}</groups>
+                            <!-- For debugging, include only subset of tests: -->
+                            <!-- <includes>
+                                <include>ee.jakarta.tck.concurrent.spec.signature.*Tests</include>
+                             </includes> -->
+                            <testSourceDirectory>${project.basedir}${file.separarator}src${file.separarator}main${file.separarator}java${file.separarator}</testSourceDirectory>
+                            <dependenciesToScan>
+                                <dependency>jakarta.enterprise.concurrent:jakarta.enterprise.concurrent-tck</dependency>
+                            </dependenciesToScan>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
